kubernetes/phpmyadmin/02-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: tools
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: phpmyadmin
        k8s-app: tools-phpmyadmin
        lang: php
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        ports:
        - name: phpmyadmin-web
          containerPort: 80
