kubernetes/phpmyadmin/02-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pma-service
  namespace: global
  labels:
    k8s-app: phpmyadmin
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "PMAService"
spec:
  selector:
    k8s-app: tools-phpmyadmin
  ports:
  - name: pma
    protocol: TCP
    port: 9000
    targetPort: 80
