kubernetes/phpmyadmin/03-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pma-service
  namespace: tools
  labels:
    k8s-app: phpmyadmin
spec:
  selector:
    k8s-app: tools-phpmyadmin
  ports:
  - name: pma
    protocol: TCP
    port: 9000
    targetPort: 80
