kubernetes/phpmyadmin/03-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pma-ingress
  namespace: global
  annotations:
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: www-pma.clickyab.ae
    http:
      paths:
      - path: /
        backend:
          serviceName: pma-service
          servicePort: 9000
